<resources>
    <string name="app_name">MyCollege</string>
    <string name="create_account">Создайте аккаунт</string>
    <string name="enter">Войти</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_email">Введите почту</string>
    <string name="enter_password">Введите пароль</string>
    <string name="no_account">Регистрация</string>
    <string name="registration">Регистрация</string>
    <string name="avaible_account">Войти</string>
    <string name="role">Роль</string>
    <string name="student">Студент</string>
    <string name="lecturer">Преподаватель</string>
    <string name="to_change">Изменить</string>
    <string name="date">Дата</string>
    <string name="new_entry">Новая запись</string>
</resources>