<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textColor="@color/orange"
        android:textSize="55sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:hint="@string/enter_login" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:hint="@string/enter_email" />

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:hint="@string/enter_password" />

    <Button
        android:id="@+id/button_authorization"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"
        android:text="@string/enter" />

    <TextView
        android:id="@+id/link_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/no_account"
        android:textColor="@color/orange"
        android:textSize="15sp"
        android:textStyle="bold" />


</LinearLayout>