<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".RegActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="55sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/registration"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/role"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:singleSelection="true">

        <Button
            android:id="@+id/student_button"
            android:layout_width="150dp"
            android:layout_height="48dp"
            style="@style/ToggleButtonStyle"
            android:textSize="12sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/blue"
            android:text="@string/student" />
        <Button
            android:id="@+id/lecturer_button"
            android:layout_width="150dp"
            android:layout_height="48dp"
            style="@style/ToggleButtonStyle"
            android:textSize="12sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/blue"
            android:text="@string/lecturer"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <EditText
        android:id="@+id/user_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:hint="@string/enter_login" />

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:hint="@string/enter_password" />

    <TextView
        android:id="@+id/link_to_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/avaible_account"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:text="@string/registration" />
</LinearLayout>